@@ -29,6 +29,7 @@
     * displaying thread has been split into different thread : one thread for inside and outside.
     * pressure and msl pressure have been separated in both exterior and interior frames.
     * modified option window to separate in and out sensor/display options.
+    * each thread has now each own db connexion.
 
   * ADDED:
     * both normal and MSL pressures have been added to the database.
